--- a/arxiv/2021_04_arxiv.html
+++ b/arxiv/2021_04_arxiv.html
@@ -170,7 +170,63 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.03102">https://arxiv.org/abs/2104.03102</a></span> Symmetry decomposition of relative entropies in conformal field theory</p>
 <p class="p2"><br></p>
 <p class="p1">20210409</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.11971">https://arxiv.org/abs/2011.11971</a></span> Field-theoretical aspects of one-dimensional Bose and Fermi gases with contact interactions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.11971">https://arxiv.org/abs/2011.11971</a></span> Field-theoretical aspects of one-dimensional Bose and Fermi gases with contact interactions</p><br>
+<p class="p1">20210412</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.04088">https://arxiv.org/abs/2104.04088</a></span> SYK Meets Non-Hermiticity I: Emergent Replica Conformal Symmetry ***** (Pengfei Zhang, Shao-Kai Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.03997">https://arxiv.org/abs/2104.03997</a></span> Comments on Symmetric Mass Generation in 2d and 4d *** (David Tong)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.03971">https://arxiv.org/abs/2104.03971</a></span> Unconventional Superconductivity arising from Multipolar Kondo Interactions *** (Adarsh S. Patri, Yong Baek Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20210413</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.05147">https://arxiv.org/abs/2104.05147</a></span> Self-Duality Protected Multi-Criticality in Deconfined Quantum Phase Transitions ***** (Da-Chuan Lu, Cenke Xu, Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.04534">https://arxiv.org/abs/2104.04534</a></span> TOPOLOGICAL ORDERS IN (4+1)-DIMENSIONS</p>
+<p class="p2"><br></p>
+<p class="p1">20210414</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.06382">https://arxiv.org/abs/2104.06382</a></span> Pseudo-gauge Fields in Dirac and Weyl Materials</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.05735">https://arxiv.org/abs/2104.05735</a></span> Fracton physics of spatially extended excitations. II. Polynomial ground state degeneracy of exactly solvable models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.05777">https://arxiv.org/abs/2104.05777</a></span> Z(r)-Algebras, FQH Ground States, and Invariants of Binary Forms</p>
+<p class="p2"><br></p>
+<p class="p1">20210415</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.06729">https://arxiv.org/abs/2104.06729</a></span> Dichotomy of saddle points in energy bands of a monolayer NbSe2 ***** (Sejoong Kim, Young-Woo Son)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.06680">https://arxiv.org/abs/2104.06680</a></span> Wiedemann-Franz law for massless Dirac fermions with implications for graphene ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.06859">https://arxiv.org/abs/2104.06859</a></span> Scale without conformal invariance in membrane theory ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.06435">https://arxiv.org/abs/2104.06435</a></span> Shear Viscosity at Infinite Coupling: A Field Theory Calculation ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.07015">https://arxiv.org/abs/2104.07015</a></span> Non-abelian bosonization in two and three spatial dimensions and applications **** (Dung-Hai Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.07017">https://arxiv.org/abs/2104.07017</a></span> Spinors of Spin-one-half Fields ***** (Kevin Cahill)</p>
+<p class="p2"><br></p>
+<p class="p1">20210416</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.07420">https://arxiv.org/abs/2104.07420</a></span> Supersymmetric theories and graphene ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.07459">https://arxiv.org/abs/2104.07459</a></span> Thermoelectric and thermal properties of the weakly disordered non-Fermi liquid phase of Luttinger semimetals **** (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.07433">https://arxiv.org/abs/2104.07433</a></span> Floquet higher-order Weyl and nexus semimetals ** (Jiangbin Gong)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.07449">https://arxiv.org/abs/2104.07449</a></span> A simple approach to characterizing band topology in bosonic pairing Hamiltonians ** (Michael Levin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.07647">https://arxiv.org/abs/2104.07647</a></span> The Wishart-Sachdev-Ye-Kitaev model: Exact spectral density, Q-Laguerre polynomials, and quantum chaos *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.07583">https://arxiv.org/abs/2104.07583</a></span> Probing a Bose Metal via Electrons: Inescapable non-Fermi liquid scattering and pseudogap physics ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.07559">https://arxiv.org/abs/2104.07559</a></span> Hydrodynamics of quantum spin liquids *** (S. L. Sondhi)</p>
+<p class="p2"><br></p>
+<p class="p1">20210419</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.08270">https://arxiv.org/abs/2104.08270</a></span> SYK meets non-Hermiticity II: measurement-induced phase transition ***** (Shao-Kai Jian, Chunxiao Liu, Xiao Chen, Brian Swingle, Pengfei Zhang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.07775">https://arxiv.org/abs/2104.07775</a></span> Fermi liquids and fractional statistics in one dimension ***</p>
+<p class="p2"><br></p>
+<p class="p1">20210420</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.08493">https://arxiv.org/abs/2104.08493</a></span> A k · p effective Hamiltonian generator *** (Zhong Fang, Chen Fang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.08283">https://arxiv.org/abs/2104.08283</a></span> Fast Tensor Disentangling Algorithm ** (Kevin Slagle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.08425">https://arxiv.org/abs/2104.08425</a></span> Electronic instabilities of kagom ́e metals: saddle points and Landau theory *** (Leon Balents)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.08332">https://arxiv.org/abs/2104.08332</a></span> A New Approach to Anomalous Axial Vector Field Theory ****</p>
+<p class="p2"><br></p>
+<p class="p1">20210421</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.09896">https://arxiv.org/abs/2104.09896</a></span> Boundary Condition Independence of Non-Hermitian Hamiltonian Dynamics (Pengfei Zhang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.09528">https://arxiv.org/abs/2104.09528</a></span> Gapping fragile topological bands by interactions ** (Erez Berg, Ady Stern)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.09561">https://arxiv.org/abs/2104.09561</a></span> Lieb-Schultz-Mattis Theorem and the Filling Constraint</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.09892">https://arxiv.org/abs/2104.09892</a></span> Breaking of the gauge symmetry in lattice gauge theories *** (Ettore Vicari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.09537">https://arxiv.org/abs/2104.09537</a></span> Deconfined criticality and a gapless Z2 spin liquid in the square lattice antiferromagnet ***** (Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.09744">https://arxiv.org/abs/2104.09744</a></span> Emergence of multiple Higgs modes due to spontaneous breakdown of Z2 symmetry in a particle-hole symmetric superconductor</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.09529">https://arxiv.org/abs/2104.09529</a></span> TT ̄-deformed Fermionic Theories Revisited ** (Piljin Yib , Junggi Yoon)</p>
+<p class="p2"><br></p>
+<p class="p1">20210422</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.10549">https://arxiv.org/abs/2104.10549</a></span> Spin dynamics in the Kitaev model with disorder: Quantum Monte Carlo study of dynamical spin structure factor, magnetic susceptibility, and NMR relaxation rate *** (Joji Nasu, Yukitoshi Motome)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.10176">https://arxiv.org/abs/2104.10176</a></span> Unconventional Superconductivity in Magic-Angle Twisted Trilayer Graphene ****</p>
+<p class="p2"><br></p>
+<p class="p1">20210423</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.10725">https://arxiv.org/abs/2104.10725</a></span> Unusual excitations and double-peak specific heat in a bond-alternating spin-1 K-Γ chain (Hae-Young Kee)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
