--- a/arxiv/2021_04_arxiv.html
+++ b/arxiv/2021_04_arxiv.html
@@ -226,7 +226,36 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.10176">https://arxiv.org/abs/2104.10176</a></span> Unconventional Superconductivity in Magic-Angle Twisted Trilayer Graphene ****</p>
 <p class="p2"><br></p>
 <p class="p1">20210423</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.10725">https://arxiv.org/abs/2104.10725</a></span> Unusual excitations and double-peak specific heat in a bond-alternating spin-1 K-Γ chain (Hae-Young Kee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.10725">https://arxiv.org/abs/2104.10725</a></span> Unusual excitations and double-peak specific heat in a bond-alternating spin-1 K-Γ chain (Hae-Young Kee)</p><br>
+<p class="p1">20210426</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.11245">https://arxiv.org/abs/2104.11245</a></span> Non-Trivial Fixed Points and Truncated SU(4) Kondo Models in a Quasi-Quartet Multipolar Kondo Impurity Problem **** (Daniel J. Schultz, Adarsh S. Patri, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.11382">https://arxiv.org/abs/2104.11382</a></span> Fluctuation effects at the onset of 2kF density wave order with two pairs of hot spots in two-dimensional metals ****</p>
+<p class="p2"><br></p>
+<p class="p1">20210427</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.11753">https://arxiv.org/abs/2104.11753</a></span> Conserved Quantities from Entanglement Hamiltonian</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.13989">https://arxiv.org/abs/2012.13989</a></span> A Note on Gauge Anomaly Cancellation in Effective Field Theories</p>
+<p class="p2"><br></p>
+<p class="p1">20210428</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.12779">https://arxiv.org/abs/2104.12779</a></span> Gross-Neveu-Heisenberg criticality from competing nematic and antiferromagnetic orders in bilayer graphene ***** (Lukas Janssen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.13235">https://arxiv.org/abs/2104.13235</a></span> Twisted magnetic topological insulators ** (Gang Chen)<br>
+<a href="https://arxiv.org/abs/2104.13372"><span class="s1">https://arxiv.org/abs/2104.13372</span></a> The Measurement-induced Transition in Long-range Interacting Quantum Circuits ***** (Soonwon Choi, Altman, Norman Y. Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.12887">https://arxiv.org/abs/2104.12887</a></span> Spin Transport in Quantum Spin-Orbital Liquids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.13233">https://arxiv.org/abs/2104.13233</a></span> Domain Wall Decorations, Anomalies and Spectral Sequences in Bosonic Topological Phases *** (Meng Cheng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.14416">https://arxiv.org/abs/2012.14416</a></span> Clock-dependent spacetime **** (Sung-Sik Lee)</p>
+<p class="p2"><br></p>
+<p class="p1">20210429</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.13631">https://arxiv.org/abs/2104.13631</a></span> Fragile topological insulators protected by rotation symmetry without spin-orbit coupling *** (Akira Furusaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.13920">https://arxiv.org/abs/2104.13920</a></span> Re-entrant superconductivity through a quantum Lifshitz transition in twisted trilayer graphene *** (Ethan Lake, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.13802">https://arxiv.org/abs/2104.13802</a></span> One-dimensional scattering of two-dimensional fermions near quantum criticality ** (A. Kamenev, A. Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.13569">https://arxiv.org/abs/2104.13569</a></span> Veltman, renormalizability, calculability</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.13391">https://arxiv.org/abs/2104.13391</a></span> Anomalies and Supersymmetry ***** (Piljin Yi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1811.12415">https://arxiv.org/abs/1811.12415</a></span> Interacting spin-3/2 fermions in a Luttinger (semi)metal: competing phases and their selection in the global phase diagram **** (Bitan Roy)</p>
+<p class="p2"><br></p>
+<p class="p1">20210430</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.13928">https://arxiv.org/abs/2104.13928</a></span> (Classical) Prethermal phases of matter ** (Johannes Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.13927">https://arxiv.org/abs/2104.13927</a></span> Classical prethermal discrete time crystals ** (Norman Y. Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.13929">https://arxiv.org/abs/2104.13929</a></span> A new rank-2 Argyres-Douglas theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.14472">https://arxiv.org/abs/2104.14472</a></span> Generalized Abelian Gauge Field Theory under Rotor Model</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
