--- a/arxiv/2021_06_arxiv.html
+++ b/arxiv/2021_06_arxiv.html
@@ -173,7 +173,61 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1">20210609</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.04395">https://arxiv.org/abs/2106.04395</a></span> Low-energy effective theory and symmetry classification of flux phases on Kagome lattice</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.04557">https://arxiv.org/abs/2106.04557</a></span> Identification of Magnetic Interactions and High-field Quantum Spin Liquid in α-RuCl3</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.04200">https://arxiv.org/abs/2106.04200</a></span> Topological Superconductivity in an s-wave Superconductor and Its Implication to Iron-based Superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.04200">https://arxiv.org/abs/2106.04200</a></span> Topological Superconductivity in an s-wave Superconductor and Its Implication to Iron-based Superconductors</p><br>
+<p class="p1">20210610</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.04582">https://arxiv.org/abs/2106.04582</a></span> Classification of Exceptional Nodal Topologies Protected by PT Symmetry **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.05105">https://arxiv.org/abs/2106.05105</a></span> Variational Quantum-Neural Hybrid Eigensolver (Hong Yao)</p>
+<p class="p2"><br></p>
+<p class="p1">20210611</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.05670">https://arxiv.org/abs/2106.05670</a></span> Lattice model for the Coulomb interacting chiral limit of the magic angle twisted bilayer graphene: symmetries, obstructions and excitations *** (Oskar Vafek, Jian Kang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.05416">https://arxiv.org/abs/2106.05416</a></span> Fragile versus stable two-dimensional fermionic quasiparticles *** (Seongjin Ahn, Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.05417">https://arxiv.org/abs/2106.05417</a></span> Tight-Binding realization of non-abelian gauge fields: singular spectra and wave confinement</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.05567">https://arxiv.org/abs/2106.05567</a></span> Enhanced pairing mechanism in Cuprate-type crystals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.05771">https://arxiv.org/abs/2106.05771</a></span> Van Hove singularities at phase transitions in topological metals ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.05282">https://arxiv.org/abs/2106.05282</a></span> Dynamical phase transitions in quantum spin models with antiferromagnetic long-range interactions ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.05272">https://arxiv.org/abs/2106.05272</a></span> General Construction and Topological Classification of All Magnetic and Non-Magnetic Flat Bands (B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.05283">https://arxiv.org/abs/2106.05283</a></span> Characterizing two-dimensional superconductivity via nanoscale noise magnetometry with single-spin qubits (Shubhayu Chatterjee, Ilya Esterlis, Mikhail D. Lukin, Norman Y. Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.05270">https://arxiv.org/abs/2106.05270</a></span> Band manipulation and spin texture in interacting moir ́e helical edges (Jennifer Cano, J. H. Pixley)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.05274">https://arxiv.org/abs/2106.05274</a></span> Higher cup products on hypercubic lattices: application to lattice models of topological phases ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.05287">https://arxiv.org/abs/2106.05287</a></span> Catalogue of Flat Band Stoichiometric Materials (B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.05290">https://arxiv.org/abs/2106.05290</a></span> Pseudoscalar U(1) spin liquids in α-RuCl3</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.05383">https://arxiv.org/abs/2106.05383</a></span> The extended diffusive Sachdev-Ye-Kitaev model as a sort of "strange metal" ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.05451">https://arxiv.org/abs/2106.05451</a></span> A New Model for Fractons, Fluxons, and Freeons *** (Jintae Kim, Jung Hoon Han)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.05518">https://arxiv.org/abs/2106.05518</a></span> Emergent Rokhsar-Kivelson point in realistic quantum Ising models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.05749">https://arxiv.org/abs/2106.05749</a></span> Competing topological orders in three dimensions</p>
+<p class="p2"><br></p>
+<p class="p1">20210614</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.06204">https://arxiv.org/abs/2106.06204</a></span> Orbital-selective Mott phase and non-Fermi liquid in FePS3 (Heung-Sik Kim, Kristjan Haule, David Vanderbilt)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.07459">https://arxiv.org/abs/2104.07459</a></span> Thermoelectric and thermal properties of the weakly disordered non-Fermi liquid phase of Luttinger semimetals *** (Ipsita Mandal)</p>
+<p class="p2"><br></p>
+<p class="p1">20210615</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.07339">https://arxiv.org/abs/2106.07339</a></span> Kubo’s response theory and bosonization with a background gauge field and irrelevant perturbations</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.11398">https://arxiv.org/abs/2012.11398</a></span> Lattice-fermionic Casimir effect and topological insulators **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/hep-th/0611263">https://arxiv.org/abs/hep-th/0611263</a></span> The unitary representations of the Poincar ́e group in any spacetime dimension</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.06699">https://arxiv.org/abs/2106.06699</a></span> REVISITING THE TOPOLOGICAL CLASSIFICATION OF DEFECTS IN CRYSTALS</p>
+<p class="p2"><br></p>
+<p class="p1">20210616</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.07664">https://arxiv.org/abs/2106.07664</a></span> Fractonic plaquette-dimer liquid beyond renormalization ***** (Yizhi You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.07782">https://arxiv.org/abs/2106.07782</a></span> Length scale formation in the Landau levels of quasicrystals **** (Junmo Jeon, Moon Jip Park, SungBin Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.08300">https://arxiv.org/abs/2106.08300</a></span> Effective Fermion Mass in Relativistic and Non-Relativistic Systems ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.07674">https://arxiv.org/abs/2106.07674</a></span> Spontaneous Symmetry Breaking, Spectral Statistics, and the Ramp ** (Brian Swingle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.07668">https://arxiv.org/abs/2106.07668</a></span> Disentangling (2 + 1)d Topological States of Matter with the Entanglement Negativity ** (Jeffrey C.Y. Teo)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.07790">https://arxiv.org/abs/2106.07790</a></span> Interaction effects in Graphene in a weak magnetic field ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.12320">https://arxiv.org/abs/2011.12320</a></span> Boundary supersymmetry of 1+1 d fermionic SPT phases **** (Juven Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.03118">https://arxiv.org/abs/2106.03118</a></span> Aspects of Pseudo Entropy in Field Theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.06420">https://arxiv.org/abs/2101.06420</a></span> Localization Dynamics from Impurities and Quantum Gauge Theories</p>
+<p class="p2"><br></p>
+<p class="p1">20210617</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.08354">https://arxiv.org/abs/2106.08354</a></span> Superconducting-like response in driven systems near the Mott transition ** (Patrick A. Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.08954">https://arxiv.org/abs/2106.08954</a></span> Type-II Weyl semimetal vs gravastar **** (G.E. Volovik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.08542">https://arxiv.org/abs/2106.08542</a></span> g + ig topological superconductivity in the 30<span class="s2">◦</span>-twisted bilayer graphene **</p>
+<p class="p2"><br></p>
+<p class="p1">20210618</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.09717">https://arxiv.org/abs/2106.09717</a></span> Higher-order topological insulators from 3Q charge bond orders on hexagonal lattices: A hint to kagome metals **** (Yu-Ping Lin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.09577">https://arxiv.org/abs/2106.09577</a></span> Optical Response from Charge-Density Waves in Weyl Semimetals **** (Barry Bradlyn)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.09635">https://arxiv.org/abs/2106.09635</a></span> Quantum error as an emergent magnetic field ***** (Shao-Kai Jian, Chunxiao Liu, Xiao Chen, Brian Swingle, Pengfei Zhang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.09318">https://arxiv.org/abs/2106.09318</a></span> Unveiling critical stripy state in the triangular-lattice SU(4) spin-orbital model</p>
+<p class="p3"><a href="https://arxiv.org/abs/2106.09194">https://arxiv.org/abs/2106.09194</a><span class="s3"> RG Flows and Dynamical Systems ***</span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
