--- a/arxiv/2021_06_arxiv.html
+++ b/arxiv/2021_06_arxiv.html
@@ -227,7 +227,46 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.09577">https://arxiv.org/abs/2106.09577</a></span> Optical Response from Charge-Density Waves in Weyl Semimetals **** (Barry Bradlyn)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.09635">https://arxiv.org/abs/2106.09635</a></span> Quantum error as an emergent magnetic field ***** (Shao-Kai Jian, Chunxiao Liu, Xiao Chen, Brian Swingle, Pengfei Zhang)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.09318">https://arxiv.org/abs/2106.09318</a></span> Unveiling critical stripy state in the triangular-lattice SU(4) spin-orbital model</p>
-<p class="p3"><a href="https://arxiv.org/abs/2106.09194">https://arxiv.org/abs/2106.09194</a><span class="s3"> RG Flows and Dynamical Systems ***</span></p>
+<p class="p3"><a href="https://arxiv.org/abs/2106.09194">https://arxiv.org/abs/2106.09194</a><span class="s3"> RG Flows and Dynamical Systems ***</span></p><br>
+<p class="p1">20210621</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.10246">https://arxiv.org/abs/2106.10246</a></span> Coulomb Drag Between a Carbon Nanotube and Monolayer Graphene (Philip Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.10032">https://arxiv.org/abs/2106.10032</a></span> Fourier formula for quantum partition functions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.10242">https://arxiv.org/abs/2106.10242</a></span> Topological gravity in 3+1D and a possible origin of dark matter</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.09723">https://arxiv.org/abs/2106.09723</a></span> A model of persistent breaking of discrete symmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.09948">https://arxiv.org/abs/2106.09948</a></span> Limits of Eliashberg Theory and Bounds for Superconducting Transition Temperature *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.09726">https://arxiv.org/abs/2106.09726</a></span> Finite speed of quantum information in models of interacting bosons at finite density ** (Andrew Lucas)</p>
+<p class="p2"><br></p>
+<p class="p1">20210622</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.10695">https://arxiv.org/abs/2106.10695</a></span> Bloch oscillations in the spin-1/2 XXZ chain ** (Haruki Watanabe)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.11295">https://arxiv.org/abs/2106.11295</a></span> Superconductivity from energy fluctuations in dilute quantum critical polar metals *** (Premala Chandra, Piers Coleman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.10300">https://arxiv.org/abs/2106.10300</a></span> Group theoretic approach to many-body scar states in fermionic lattice models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.11245">https://arxiv.org/abs/2106.11245</a></span> Non-equilibrium Sachdev-Ye-Kitaev model with quadratic perturbation ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.10802">https://arxiv.org/abs/2106.10802</a></span> Low-density superconductivity in SrTiO3 bounded by the adiabatic criterion (Suk Bum Chung, Srinivas Raghu, Harold Y. Hwang)</p>
+<p class="p2"><br></p>
+<p class="p1">20210623</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.11954">https://arxiv.org/abs/2106.11954</a></span> Magic in twisted transition metal dichalcogenide bilayers ***** (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.11761">https://arxiv.org/abs/2106.11761</a></span> The k · p model: a short overview for beginners *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.11323">https://arxiv.org/abs/2106.11323</a></span> Symmetry breaking at high temperatures in large N gauge theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.11316">https://arxiv.org/abs/2106.11316</a></span> Time-resolved ARPES on cuprates: Tracking the low-energy electrodynamics in the time domain</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1609.00020">https://arxiv.org/abs/1609.00020</a></span> Scaling behaviour and superconducting instability in anisotropic non-Fermi liquids ***** (Ipsita Mandal)</p>
+<p class="p2"><br></p>
+<p class="p1">20210624</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.11985">https://arxiv.org/abs/2106.11985</a></span> High-throughput Investigations of Topological and Nodal Superconductors **** (Xiangang Wan, Haruki Watanabe)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.11982">https://arxiv.org/abs/2106.11982</a></span> Can we realize Kitaev quantum spin liquids in the jeff = 1/2 honeycomb cobaltates? *** (Arun Paramekanti)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.12078">https://arxiv.org/abs/2106.12078</a></span> Superconductivity of incoherent electrons in Yukawa-SYK model ***** (Laura Classen, Andrey V. Chubukov)<br>
+<a href="https://arxiv.org/abs/2106.12222"><span class="s1">https://arxiv.org/abs/2106.12222</span></a> Lieb-Schultz-Mattis theorem in higher dimensions from approximate magnetic translation symmetry ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.11983">https://arxiv.org/abs/2106.11983</a></span> Superconductivity in spin-3/2 systems: symmetry classification, odd-frequency pairs, and Bogoliubov Fermi surfaces *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.12305">https://arxiv.org/abs/2106.12305</a></span> Non-Hermitian chiral anomalies ****</p>
+<p class="p2"><br></p>
+<p class="p1">20210625</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.13075">https://arxiv.org/abs/2106.13075</a></span> Theory of Multi-Orbital Topological Superconductivity in Transition Metal Dichalcogenides (Erez Berg, and Yuval Oreg)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2106.12775">https://arxiv.org/abs/2106.12775</a><span class="s2"> Magnonics vs. Ferronics</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.13057">https://arxiv.org/abs/2106.13057</a></span> General construction of flat bands with and without band crossings based on the wave function singularity **** (YoonseokHwang, Jun-Won Rhim, Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.13209">https://arxiv.org/abs/2106.13209</a></span> Disorder-driven Phase Transitions of Second-order Non-Hermitian Skin Effects *** (Kyoung-Min Kim, Moon Jip Park)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.12610">https://arxiv.org/abs/2106.12610</a></span> Mean string field theory: Landau-Ginzburg theory for 1-form symmetries ***** (John McGreevy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.12601">https://arxiv.org/abs/2106.12601</a></span> The dynamical exponent of a quantum critical itinerant ferromagnet: a Monte Carlo study (Yuxuan Wang, Kai Sun, Andrey V. Chubukov, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.12724">https://arxiv.org/abs/2106.12724</a></span> Superconductivity-Induced Spectral Weight Transfer due to Quantum Geometry *** (Junyeong Ahn, Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1911.12775">https://arxiv.org/abs/1911.12775</a></span> Kerr-Newman stress-tensor from minimal coupling (Yu-tin Huang, Jung-Wook Kim)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
